# MCP-Mastery

./: .gitignore  README.md  main.py  pyproject.toml
01-Introduction/: 1-anaconda nodejs claude install.html  2-uv vs pip.html
02-Demo-Server/demo-server/: client_fastmcp.py  client_mcp.py  server.py
02-Demo-Server/weather/: client.py  server.py
03-MCP-Server-Ollama-Agent/: advanced-agentic-client.py  agentic-client.py  math-server.py  mcp.json  weather-server.py
