[project]
name = "mcp-mastery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.14.1",
    "h2>=4.3.0",
    "httpx>=0.28.1",
    "langchain>=1.2.0",
    "langchain-ollama>=1.0.1",
    "mcp>=1.24.0",
    "mcp-use[search]>=1.5.1",
    "numpy>=2.4.0",
]
